suite/tests/switch/invalid/dup-default.c
int main(void)
{
    switch (1) {
	default:
	default:
	    return 1;
    }

    return 0;
}

